# nl2dsl

./: .env.example  .gitignore  PROJECT_OVERVIEW.md  README.md  TECH_STACK.md  agents.md  architecture.md  code-execution.md  environment.yml  evaluation.md  pyproject.toml  schema-retrieval.md
data/schema/: table_metadata.json
frontend/: app.py
src/: config.py  main.py
src/agents/: coder.py  intent.py  slot.py  supervisor.py
src/db/: client.py  seed.py
src/graph/: state.py  workflow.py
src/llm/: client.py
src/models/: __init__.py
src/sandbox/: dsl.py  executor.py
